<resources>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_live_query_url">wss://doodle.b4a.io</string>
    <string name="App_name">Doodl.e</string>
    <string name="app_name">doodl.e</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_failed">Login failed, please try again</string>
    <string name="signup_failed">Signup failed, please try again</string>
    <string name="verifying_credentials">Verifying credentials...</string>
    <string name="logout_failed">Logout failed, please try again</string>
    <string name="Profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="Gallery">Gallery</string>
    <string name="dots">•••••••</string>
    <string name="Doodle_Mode">Doodle Mode</string>
    <string name="Game_Mode">Game Mode</string>
    <string name="Create">Create</string>
    <string name="Contribute">Contribute</string>
    <string name="Join">Join</string>
    <string name="Your_game_code_is">Your game code is:</string>
    <string name="sample_game_code">AFXP</string>
    <string name="Enter_game_code">Enter game code:</string>
    <string name="Create_Game">Create Game!</string>
    <string name="Join_Game">Join Game!</string>
    <string name="Doodle">Doodle</string>
    <string name="Game">Game</string>
    <string name="Waiting_Room">Waiting Room</string>
    <string name="Start_Game">Start Game!</string>
    <string name="Players">Players:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_gallery">Loading gallery...</string>
    <string name="failed_to_load_gallery">Failed to load gallery, please try again later</string>
    <string name="nothing_here_yet">Nothing here yet...</string>
    <string name="logging_out">Logging out...</string>
    <string name="create_a_new_doodle">Create a new doodle!</string>
    <string name="add_to_an_existing_doodle">Add to an existing doodle!</string>
    <string name="Done">Done</string>
    <string name="doodle_submitted">Doodle submitted!</string>
    <string name="error_saving_doodle">There was an error saving the doodle, please try again</string>
    <string name="error_finding_doodle">There was an error finding the doodle, please try again</string>
    <string name="saving_doodle">Saving doodle...</string>
    <string name="add_to_this_doodle">Add to this doodle!</string>
    <string name="failed_to_load_doodles">Failed to load doodles, please try again</string>
    <string name="loading_doodles">Loading doodles...</string>
    <string name="finding_doodle">Finding doodle...</string>
    <string name="no_doodles_to_contribute_to">No doodles to contribute to...</string>
    <string name="loading_doodle">Loading doodle...</string>
    <string name="loading_doodle_history">Loading doodle history...</string>
    <string name="error_loading_history">There was an error loading the history of this doodle, please try again</string>
    <string name="no_contributions_yet">No contributions yet...</string>
    <string name="original_doodle">Original Doodle:</string>
    <string name="contributions">Contributions:</string>
    <string name="Contributions">Contributions</string>
    <string name="loading_contributions">Loading contributions...</string>
    <string name="see_contributions">See contributions to this doodle!</string>
    <string name="creating_game">Creating game...</string>
    <string name="error_creating_game">Error creating game, please try again</string>
    <string name="finding_game">Finding game...</string>
    <string name="error_finding_game">Couldn\'t find game, please check game code and try again</string>
    <string name="error_finding_players">Error finding players, please wait</string>
    <string name="error_joining_game">Error joining game, please try again</string>
    <string name="waiting_for_other_players">Waiting for other players...</string>
    <string name="wait_for_host">Wait for the host to start the game!</string>
    <string name="round">Round</string>
    <string name="error_fetching_doodles">Error fetching doodles, please wait</string>
    <string name="error_fetching_game_info">There was an error fetching the game information, please wait</string>
    <string name="error_updating_game">There was an error updating the game, please wait</string>
    <string name="game_results">Game Results</string>
    <string name="failed_to_load_doodles_from_game">Failed to load doodles from the game, please wait</string>
    <string name="s_doodle">\'s doodle:</string>
    <string name="time_limit">Time limit:</string>
    <string name="seconds_unit">s</string>
    <string name="starting_game">Starting game...</string>
    <string name="error_starting_game">There was an error starting the game, please try again</string>
    <string name="joining_game">Joining game...</string>
    <string name="Home">Home</string>
    <string name="sure_you_want_to_leave_game">Are you sure you want to leave the game?</string>
    <string name="once_you_leave_you_cant_come_back">Once you leave the game, you can\'t rejoin.</string>
    <string name="leave_game">Leave game</string>
    <string name="never_mind">Never mind</string>
    <string name="player_has_left_the_game">A player has left the game</string>
    <string name="players_have_left_the_game">players have left the game</string>
    <string name="you_can_still_rejoin_before_it_starts">You can still rejoin the game before it starts.</string>
    <string name="that_game_is_full">Sorry, that game is full.</string>
    <string name="that_game_already_started">Sorry, that game has already started.</string>
    <string name="you_are_the_last_player">You are the last player left in the game, if you leave the game will be deleted.</string>
    <string name="you_have_been_made_host">The previous host left, so you have been made the host!</string>
    <string name="another_player_will_become_host">Another player will become the host.</string>
    <string name="you_will_receive_notifications">You will now receive a notification every time someone contributes to one of your doodles.</string>
    <string name="you_will_not_receive_notifications">You will no longer receive a notification every time someone contributes to one of your doodles.</string>
    <string name="failed_to_save_user_settings">Failed to save user settings, please try again</string>
    <string name="notifications">notifications</string>
    <string name="anonymous">anonymous</string>
    <string name="you_will_be_anonymous">Your username will be hidden on doodles you create.</string>
    <string name="you_will_not_be_anonymous">Other people will be able to see your username on doodles you create.</string>
    <string name="anon">anon</string>
    <string name="you">you</string>
</resources>